Correct the sizes of the wrap
Correct the size of the wrap from 330px to 440px

--- a/style.css
+++ b/style.css
@@ -45,8 +45,8 @@ table {
 
 .wrap{
     perspective:500px;
-	width:330px;
-	height:330px;
+	width:440px;
+	height:440px;
 	border:1px solid black;
 	position: absolute;
 	left: calc(50% - 165px);
